// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AvatarList Users Per Page Index Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jgMvuu"
>
  <div
    className="StyledBox-sc-13pk1d4-0 jvEYNq"
  >
    <div
      className="StyledGrid-sc-1wofa1l-0 iouMDr"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 dWmAOF"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lacKJc"
        >
          <img
            aria-label="avatar_url"
            className="StyledImage-ey4zx9-0 bNTdlD"
            src="https://avatars.githubusercontent.com/u/7027534?v=4"
          />
        </div>
        <header
          className="StyledBox-sc-13pk1d4-0 ehkiBy"
        >
          <div
            aria-label="avatar"
            className="StyledBox-sc-13pk1d4-0 iyLGpL StyledAvatar-sc-1suyamb-1"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hCllNm"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 kUTqHn"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 egvixI"
            >
              rmq
            </h3>
            <span
              className="StyledText-sc-1sadyjn-0 AnIwL"
            >
              User
            </span>
          </div>
        </header>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 dWmAOF"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lacKJc"
        >
          <img
            aria-label="avatar_url"
            className="StyledImage-ey4zx9-0 bNTdlD"
            src="https://avatars.githubusercontent.com/u/7948244?v=4"
          />
        </div>
        <header
          className="StyledBox-sc-13pk1d4-0 ehkiBy"
        >
          <div
            aria-label="avatar"
            className="StyledBox-sc-13pk1d4-0 juybyH StyledAvatar-sc-1suyamb-1"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hCllNm"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 kUTqHn"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 egvixI"
            >
              rmquapp
            </h3>
            <span
              className="StyledText-sc-1sadyjn-0 AnIwL"
            >
              User
            </span>
          </div>
        </header>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 dWmAOF"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lacKJc"
        >
          <img
            aria-label="avatar_url"
            className="StyledImage-ey4zx9-0 bNTdlD"
            src="https://avatars.githubusercontent.com/u/2769202?v=4"
          />
        </div>
        <header
          className="StyledBox-sc-13pk1d4-0 ehkiBy"
        >
          <div
            aria-label="avatar"
            className="StyledBox-sc-13pk1d4-0 hpkLuB StyledAvatar-sc-1suyamb-1"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hCllNm"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 kUTqHn"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 egvixI"
            >
              rmqlife
            </h3>
            <span
              className="StyledText-sc-1sadyjn-0 AnIwL"
            >
              User
            </span>
          </div>
        </header>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 dWmAOF"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lacKJc"
        >
          <img
            aria-label="avatar_url"
            className="StyledImage-ey4zx9-0 bNTdlD"
            src="https://avatars.githubusercontent.com/u/5082896?v=4"
          />
        </div>
        <header
          className="StyledBox-sc-13pk1d4-0 ehkiBy"
        >
          <div
            aria-label="avatar"
            className="StyledBox-sc-13pk1d4-0 fErLWj StyledAvatar-sc-1suyamb-1"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hCllNm"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 kUTqHn"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 egvixI"
            >
              mcquaye
            </h3>
            <span
              className="StyledText-sc-1sadyjn-0 AnIwL"
            >
              User
            </span>
          </div>
        </header>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 dWmAOF"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lacKJc"
        >
          <img
            aria-label="avatar_url"
            className="StyledImage-ey4zx9-0 bNTdlD"
            src="https://avatars.githubusercontent.com/u/21207378?v=4"
          />
        </div>
        <header
          className="StyledBox-sc-13pk1d4-0 ehkiBy"
        >
          <div
            aria-label="avatar"
            className="StyledBox-sc-13pk1d4-0 bJUMot StyledAvatar-sc-1suyamb-1"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hCllNm"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 kUTqHn"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 egvixI"
            >
              rmquimby
            </h3>
            <span
              className="StyledText-sc-1sadyjn-0 AnIwL"
            >
              User
            </span>
          </div>
        </header>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 dWmAOF"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lacKJc"
        >
          <img
            aria-label="avatar_url"
            className="StyledImage-ey4zx9-0 bNTdlD"
            src="https://avatars.githubusercontent.com/u/49787128?v=4"
          />
        </div>
        <header
          className="StyledBox-sc-13pk1d4-0 ehkiBy"
        >
          <div
            aria-label="avatar"
            className="StyledBox-sc-13pk1d4-0 biKuNJ StyledAvatar-sc-1suyamb-1"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hCllNm"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 kUTqHn"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 egvixI"
            >
              rmqn
            </h3>
            <span
              className="StyledText-sc-1sadyjn-0 AnIwL"
            >
              User
            </span>
          </div>
        </header>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 dWmAOF"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lacKJc"
        >
          <img
            aria-label="avatar_url"
            className="StyledImage-ey4zx9-0 bNTdlD"
            src="https://avatars.githubusercontent.com/u/19260498?v=4"
          />
        </div>
        <header
          className="StyledBox-sc-13pk1d4-0 ehkiBy"
        >
          <div
            aria-label="avatar"
            className="StyledBox-sc-13pk1d4-0 jUqLgG StyledAvatar-sc-1suyamb-1"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hCllNm"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 kUTqHn"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 egvixI"
            >
              rmqc0909
            </h3>
            <span
              className="StyledText-sc-1sadyjn-0 AnIwL"
            >
              User
            </span>
          </div>
        </header>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 dWmAOF"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lacKJc"
        >
          <img
            aria-label="avatar_url"
            className="StyledImage-ey4zx9-0 bNTdlD"
            src="https://avatars.githubusercontent.com/u/9161401?v=4"
          />
        </div>
        <header
          className="StyledBox-sc-13pk1d4-0 ehkiBy"
        >
          <div
            aria-label="avatar"
            className="StyledBox-sc-13pk1d4-0 ervSVV StyledAvatar-sc-1suyamb-1"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hCllNm"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 kUTqHn"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 egvixI"
            >
              rmq1992
            </h3>
            <span
              className="StyledText-sc-1sadyjn-0 AnIwL"
            >
              User
            </span>
          </div>
        </header>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 dWmAOF"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lacKJc"
        >
          <img
            aria-label="avatar_url"
            className="StyledImage-ey4zx9-0 bNTdlD"
            src="https://avatars.githubusercontent.com/u/12327608?v=4"
          />
        </div>
        <header
          className="StyledBox-sc-13pk1d4-0 ehkiBy"
        >
          <div
            aria-label="avatar"
            className="StyledBox-sc-13pk1d4-0 cTLtSQ StyledAvatar-sc-1suyamb-1"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hCllNm"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 kUTqHn"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 egvixI"
            >
              rmqfb
            </h3>
            <span
              className="StyledText-sc-1sadyjn-0 AnIwL"
            >
              User
            </span>
          </div>
        </header>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 dWmAOF"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lacKJc"
        >
          <img
            aria-label="avatar_url"
            className="StyledImage-ey4zx9-0 bNTdlD"
            src="https://avatars.githubusercontent.com/u/52817663?v=4"
          />
        </div>
        <header
          className="StyledBox-sc-13pk1d4-0 ehkiBy"
        >
          <div
            aria-label="avatar"
            className="StyledBox-sc-13pk1d4-0 kawPMd StyledAvatar-sc-1suyamb-1"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hCllNm"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 kUTqHn"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 egvixI"
            >
              rmq767
            </h3>
            <span
              className="StyledText-sc-1sadyjn-0 AnIwL"
            >
              User
            </span>
          </div>
        </header>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 dWmAOF"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lacKJc"
        >
          <img
            aria-label="avatar_url"
            className="StyledImage-ey4zx9-0 bNTdlD"
            src="https://avatars.githubusercontent.com/u/56458617?v=4"
          />
        </div>
        <header
          className="StyledBox-sc-13pk1d4-0 ehkiBy"
        >
          <div
            aria-label="avatar"
            className="StyledBox-sc-13pk1d4-0 eKeogZ StyledAvatar-sc-1suyamb-1"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hCllNm"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 kUTqHn"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 egvixI"
            >
              rmqy
            </h3>
            <span
              className="StyledText-sc-1sadyjn-0 AnIwL"
            >
              User
            </span>
          </div>
        </header>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 dWmAOF"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lacKJc"
        >
          <img
            aria-label="avatar_url"
            className="StyledImage-ey4zx9-0 bNTdlD"
            src="https://avatars.githubusercontent.com/u/76009521?v=4"
          />
        </div>
        <header
          className="StyledBox-sc-13pk1d4-0 ehkiBy"
        >
          <div
            aria-label="avatar"
            className="StyledBox-sc-13pk1d4-0 ddOmMx StyledAvatar-sc-1suyamb-1"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hCllNm"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 kUTqHn"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 egvixI"
            >
              rmqz
            </h3>
            <span
              className="StyledText-sc-1sadyjn-0 AnIwL"
            >
              User
            </span>
          </div>
        </header>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 dWmAOF"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lacKJc"
        >
          <img
            aria-label="avatar_url"
            className="StyledImage-ey4zx9-0 bNTdlD"
            src="https://avatars.githubusercontent.com/u/11010602?v=4"
          />
        </div>
        <header
          className="StyledBox-sc-13pk1d4-0 ehkiBy"
        >
          <div
            aria-label="avatar"
            className="StyledBox-sc-13pk1d4-0 oKjHa StyledAvatar-sc-1suyamb-1"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hCllNm"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 kUTqHn"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 egvixI"
            >
              RMQQ
            </h3>
            <span
              className="StyledText-sc-1sadyjn-0 AnIwL"
            >
              User
            </span>
          </div>
        </header>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 dWmAOF"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lacKJc"
        >
          <img
            aria-label="avatar_url"
            className="StyledImage-ey4zx9-0 bNTdlD"
            src="https://avatars.githubusercontent.com/u/37394455?v=4"
          />
        </div>
        <header
          className="StyledBox-sc-13pk1d4-0 ehkiBy"
        >
          <div
            aria-label="avatar"
            className="StyledBox-sc-13pk1d4-0 hdMfFt StyledAvatar-sc-1suyamb-1"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hCllNm"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 kUTqHn"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 egvixI"
            >
              RMQ199720
            </h3>
            <span
              className="StyledText-sc-1sadyjn-0 AnIwL"
            >
              User
            </span>
          </div>
        </header>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 dWmAOF"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lacKJc"
        >
          <img
            aria-label="avatar_url"
            className="StyledImage-ey4zx9-0 bNTdlD"
            src="https://avatars.githubusercontent.com/u/43245057?v=4"
          />
        </div>
        <header
          className="StyledBox-sc-13pk1d4-0 ehkiBy"
        >
          <div
            aria-label="avatar"
            className="StyledBox-sc-13pk1d4-0 dgcDvZ StyledAvatar-sc-1suyamb-1"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hCllNm"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 kUTqHn"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 egvixI"
            >
              rmquiroz
            </h3>
            <span
              className="StyledText-sc-1sadyjn-0 AnIwL"
            >
              User
            </span>
          </div>
        </header>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 dWmAOF"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lacKJc"
        >
          <img
            aria-label="avatar_url"
            className="StyledImage-ey4zx9-0 bNTdlD"
            src="https://avatars.githubusercontent.com/u/58199377?v=4"
          />
        </div>
        <header
          className="StyledBox-sc-13pk1d4-0 ehkiBy"
        >
          <div
            aria-label="avatar"
            className="StyledBox-sc-13pk1d4-0 ipLvMM StyledAvatar-sc-1suyamb-1"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hCllNm"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 kUTqHn"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 egvixI"
            >
              rmqrnjs6
            </h3>
            <span
              className="StyledText-sc-1sadyjn-0 AnIwL"
            >
              User
            </span>
          </div>
        </header>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 dWmAOF"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lacKJc"
        >
          <img
            aria-label="avatar_url"
            className="StyledImage-ey4zx9-0 bNTdlD"
            src="https://avatars.githubusercontent.com/u/46520949?v=4"
          />
        </div>
        <header
          className="StyledBox-sc-13pk1d4-0 ehkiBy"
        >
          <div
            aria-label="avatar"
            className="StyledBox-sc-13pk1d4-0 fsQeaa StyledAvatar-sc-1suyamb-1"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hCllNm"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 kUTqHn"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 egvixI"
            >
              rmqprg
            </h3>
            <span
              className="StyledText-sc-1sadyjn-0 AnIwL"
            >
              User
            </span>
          </div>
        </header>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 dWmAOF"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lacKJc"
        >
          <img
            aria-label="avatar_url"
            className="StyledImage-ey4zx9-0 bNTdlD"
            src="https://avatars.githubusercontent.com/u/80349039?v=4"
          />
        </div>
        <header
          className="StyledBox-sc-13pk1d4-0 ehkiBy"
        >
          <div
            aria-label="avatar"
            className="StyledBox-sc-13pk1d4-0 bA-Den StyledAvatar-sc-1suyamb-1"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hCllNm"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 kUTqHn"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 egvixI"
            >
              rmqtt-rs
            </h3>
            <span
              className="StyledText-sc-1sadyjn-0 AnIwL"
            >
              User
            </span>
          </div>
        </header>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 dWmAOF"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lacKJc"
        >
          <img
            aria-label="avatar_url"
            className="StyledImage-ey4zx9-0 bNTdlD"
            src="https://avatars.githubusercontent.com/u/43973907?v=4"
          />
        </div>
        <header
          className="StyledBox-sc-13pk1d4-0 ehkiBy"
        >
          <div
            aria-label="avatar"
            className="StyledBox-sc-13pk1d4-0 bZdKMn StyledAvatar-sc-1suyamb-1"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hCllNm"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 kUTqHn"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 egvixI"
            >
              RMQI
            </h3>
            <span
              className="StyledText-sc-1sadyjn-0 AnIwL"
            >
              User
            </span>
          </div>
        </header>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 dWmAOF"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lacKJc"
        >
          <img
            aria-label="avatar_url"
            className="StyledImage-ey4zx9-0 bNTdlD"
            src="https://avatars.githubusercontent.com/u/33080917?v=4"
          />
        </div>
        <header
          className="StyledBox-sc-13pk1d4-0 ehkiBy"
        >
          <div
            aria-label="avatar"
            className="StyledBox-sc-13pk1d4-0 gLkrNQ StyledAvatar-sc-1suyamb-1"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hCllNm"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 kUTqHn"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 egvixI"
            >
              vibhu95
            </h3>
            <span
              className="StyledText-sc-1sadyjn-0 AnIwL"
            >
              User
            </span>
          </div>
        </header>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 dWmAOF"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lacKJc"
        >
          <img
            aria-label="avatar_url"
            className="StyledImage-ey4zx9-0 bNTdlD"
            src="https://avatars.githubusercontent.com/u/66710697?v=4"
          />
        </div>
        <header
          className="StyledBox-sc-13pk1d4-0 ehkiBy"
        >
          <div
            aria-label="avatar"
            className="StyledBox-sc-13pk1d4-0 cDFvgh StyledAvatar-sc-1suyamb-1"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hCllNm"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 kUTqHn"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 egvixI"
            >
              huanyiwan
            </h3>
            <span
              className="StyledText-sc-1sadyjn-0 AnIwL"
            >
              User
            </span>
          </div>
        </header>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 dWmAOF"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lacKJc"
        >
          <img
            aria-label="avatar_url"
            className="StyledImage-ey4zx9-0 bNTdlD"
            src="https://avatars.githubusercontent.com/u/43407733?v=4"
          />
        </div>
        <header
          className="StyledBox-sc-13pk1d4-0 ehkiBy"
        >
          <div
            aria-label="avatar"
            className="StyledBox-sc-13pk1d4-0 kKlIJM StyledAvatar-sc-1suyamb-1"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hCllNm"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 kUTqHn"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 egvixI"
            >
              rmqmf
            </h3>
            <span
              className="StyledText-sc-1sadyjn-0 AnIwL"
            >
              User
            </span>
          </div>
        </header>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 dWmAOF"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lacKJc"
        >
          <img
            aria-label="avatar_url"
            className="StyledImage-ey4zx9-0 bNTdlD"
            src="https://avatars.githubusercontent.com/u/55180702?v=4"
          />
        </div>
        <header
          className="StyledBox-sc-13pk1d4-0 ehkiBy"
        >
          <div
            aria-label="avatar"
            className="StyledBox-sc-13pk1d4-0 iFnJXP StyledAvatar-sc-1suyamb-1"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hCllNm"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 kUTqHn"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 egvixI"
            >
              RMQCO
            </h3>
            <span
              className="StyledText-sc-1sadyjn-0 AnIwL"
            >
              Organization
            </span>
          </div>
        </header>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 dWmAOF"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lacKJc"
        >
          <img
            aria-label="avatar_url"
            className="StyledImage-ey4zx9-0 bNTdlD"
            src="https://avatars.githubusercontent.com/u/27466093?v=4"
          />
        </div>
        <header
          className="StyledBox-sc-13pk1d4-0 ehkiBy"
        >
          <div
            aria-label="avatar"
            className="StyledBox-sc-13pk1d4-0 bFdcto StyledAvatar-sc-1suyamb-1"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hCllNm"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 kUTqHn"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 egvixI"
            >
              rmq96010800
            </h3>
            <span
              className="StyledText-sc-1sadyjn-0 AnIwL"
            >
              User
            </span>
          </div>
        </header>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 dWmAOF"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lacKJc"
        >
          <img
            aria-label="avatar_url"
            className="StyledImage-ey4zx9-0 bNTdlD"
            src="https://avatars.githubusercontent.com/u/76421181?v=4"
          />
        </div>
        <header
          className="StyledBox-sc-13pk1d4-0 ehkiBy"
        >
          <div
            aria-label="avatar"
            className="StyledBox-sc-13pk1d4-0 ftwGMx StyledAvatar-sc-1suyamb-1"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hCllNm"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 kUTqHn"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 egvixI"
            >
              rmq9
            </h3>
            <span
              className="StyledText-sc-1sadyjn-0 AnIwL"
            >
              User
            </span>
          </div>
        </header>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 dWmAOF"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lacKJc"
        >
          <img
            aria-label="avatar_url"
            className="StyledImage-ey4zx9-0 bNTdlD"
            src="https://avatars.githubusercontent.com/u/7188387?v=4"
          />
        </div>
        <header
          className="StyledBox-sc-13pk1d4-0 ehkiBy"
        >
          <div
            aria-label="avatar"
            className="StyledBox-sc-13pk1d4-0 xSiSR StyledAvatar-sc-1suyamb-1"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hCllNm"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 kUTqHn"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 egvixI"
            >
              rmqpmg
            </h3>
            <span
              className="StyledText-sc-1sadyjn-0 AnIwL"
            >
              User
            </span>
          </div>
        </header>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 dWmAOF"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lacKJc"
        >
          <img
            aria-label="avatar_url"
            className="StyledImage-ey4zx9-0 bNTdlD"
            src="https://avatars.githubusercontent.com/u/5199417?v=4"
          />
        </div>
        <header
          className="StyledBox-sc-13pk1d4-0 ehkiBy"
        >
          <div
            aria-label="avatar"
            className="StyledBox-sc-13pk1d4-0 cIJuGx StyledAvatar-sc-1suyamb-1"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hCllNm"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 kUTqHn"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 egvixI"
            >
              rmqwbs
            </h3>
            <span
              className="StyledText-sc-1sadyjn-0 AnIwL"
            >
              User
            </span>
          </div>
        </header>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 dWmAOF"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lacKJc"
        >
          <img
            aria-label="avatar_url"
            className="StyledImage-ey4zx9-0 bNTdlD"
            src="https://avatars.githubusercontent.com/u/77146164?v=4"
          />
        </div>
        <header
          className="StyledBox-sc-13pk1d4-0 ehkiBy"
        >
          <div
            aria-label="avatar"
            className="StyledBox-sc-13pk1d4-0 cPVmYz StyledAvatar-sc-1suyamb-1"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hCllNm"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 kUTqHn"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 egvixI"
            >
              rmqf
            </h3>
            <span
              className="StyledText-sc-1sadyjn-0 AnIwL"
            >
              User
            </span>
          </div>
        </header>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 dWmAOF"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lacKJc"
        >
          <img
            aria-label="avatar_url"
            className="StyledImage-ey4zx9-0 bNTdlD"
            src="https://avatars.githubusercontent.com/u/63187449?v=4"
          />
        </div>
        <header
          className="StyledBox-sc-13pk1d4-0 ehkiBy"
        >
          <div
            aria-label="avatar"
            className="StyledBox-sc-13pk1d4-0 cdWzyt StyledAvatar-sc-1suyamb-1"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hCllNm"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 kUTqHn"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 egvixI"
            >
              rmq1219
            </h3>
            <span
              className="StyledText-sc-1sadyjn-0 AnIwL"
            >
              User
            </span>
          </div>
        </header>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 dWmAOF"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lacKJc"
        >
          <img
            aria-label="avatar_url"
            className="StyledImage-ey4zx9-0 bNTdlD"
            src="https://avatars.githubusercontent.com/u/67160146?v=4"
          />
        </div>
        <header
          className="StyledBox-sc-13pk1d4-0 ehkiBy"
        >
          <div
            aria-label="avatar"
            className="StyledBox-sc-13pk1d4-0 frzhIS StyledAvatar-sc-1suyamb-1"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hCllNm"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 kUTqHn"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 egvixI"
            >
              rmq-reds
            </h3>
            <span
              className="StyledText-sc-1sadyjn-0 AnIwL"
            >
              User
            </span>
          </div>
        </header>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Header Header Web App 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jgMvuu"
>
  <h1
    className="StyledHeading-sc-1rdh4aw-0 jjehaP"
    size="large"
  >
    Welcome to GitHub Users Finder!
  </h1>
</div>
`;

exports[`Storyshots Results Results With Error 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jgMvuu"
>
  <div
    className="StyledGrommet-sc-19lkkz7-0 jgMvuu"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 kRivxf"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 covhNw"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Results Results With Mock Data 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jgMvuu"
>
  <div
    className="StyledGrommet-sc-19lkkz7-0 jgMvuu"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 kRivxf"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 covhNw"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Search Search Component 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jgMvuu"
>
  <div
    className="StyledBox-sc-13pk1d4-0 lnquMz"
  >
    <form
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="StyledBox-sc-13pk1d4-0 bOlgoy FormField__FormFieldBox-m9hood-0 ofKvz"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          className="StyledBox-sc-13pk1d4-0 kRcyMg FormField__FormFieldContentBox-m9hood-1"
        >
          <div
            className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 gXHnix"
          >
            <input
              autoComplete="off"
              className="StyledTextInput-sc-1x30a0s-0 gVrQNs"
              name="githubLogin"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Enter the Github Login"
              type="githubLogin"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 hFrNom"
      >
        <button
          className="StyledButton-sc-323bzc-0 kflPHx"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="reset"
        >
          Reset
        </button>
        <button
          className="StyledButton-sc-323bzc-0 fEWJyT"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="submit"
        >
          Search
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots SortRadioButtons Sort Radio Buttons Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jgMvuu"
>
  <div
    className="StyledBox-sc-13pk1d4-0 eGjvNh"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 dnSXwv"
      role="radiogroup"
    >
      <label
        className="StyledRadioButton__StyledRadioButtonContainer-g1f6ld-0 dKGASN"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="StyledBox-sc-13pk1d4-0 cWAgDf StyledRadioButton-g1f6ld-5 cQxxvY"
        >
          <input
            checked={true}
            className="StyledRadioButton__StyledRadioButtonInput-g1f6ld-1 bRmCoz"
            name="radio"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            tabIndex="0"
            type="radio"
            value="LoginDESC"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 dufTFR StyledRadioButton__StyledRadioButtonBox-g1f6ld-4 lkJviK"
          >
            <svg
              className="StyledRadioButton__StyledRadioButtonIcon-g1f6ld-3 dQnYHj"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <circle
                cx={12}
                cy={12}
                r={6}
              />
            </svg>
          </div>
        </div>
        Login
        <svg
          aria-label="Descend"
          className="StyledIcon-ofa7kd-0 hVBrNB"
          viewBox="0 0 24 24"
        >
          <path
            d="m2 16 6 6 6-6M11 3h11M11 7h8m-8 4h5M8 22V2"
            fill="none"
            stroke="#000"
            strokeWidth="2"
          />
        </svg>
      </label>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 eMSArZ"
      />
      <label
        className="StyledRadioButton__StyledRadioButtonContainer-g1f6ld-0 dKGASN"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="StyledBox-sc-13pk1d4-0 cWAgDf StyledRadioButton-g1f6ld-5 cQxxvY"
        >
          <input
            checked={false}
            className="StyledRadioButton__StyledRadioButtonInput-g1f6ld-1 bRmCoz"
            name="radio"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            tabIndex="-1"
            type="radio"
            value="LoginASC"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 bYgAvJ StyledRadioButton__StyledRadioButtonBox-g1f6ld-4 lkJviK"
          />
        </div>
        Login
        <svg
          aria-label="Ascend"
          className="StyledIcon-ofa7kd-0 hVBrNB"
          viewBox="0 0 24 24"
        >
          <path
            d="m2 8 6-6 6 6m-3 13h11m-11-4h8m-8-4h5M8 2v20"
            fill="none"
            stroke="#000"
            strokeWidth="2"
          />
        </svg>
      </label>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 eMSArZ"
      />
      <label
        className="StyledRadioButton__StyledRadioButtonContainer-g1f6ld-0 dKGASN"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="StyledBox-sc-13pk1d4-0 cWAgDf StyledRadioButton-g1f6ld-5 cQxxvY"
        >
          <input
            checked={false}
            className="StyledRadioButton__StyledRadioButtonInput-g1f6ld-1 bRmCoz"
            name="radio"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            tabIndex="-1"
            type="radio"
            value="TypeDESC"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 bYgAvJ StyledRadioButton__StyledRadioButtonBox-g1f6ld-4 lkJviK"
          />
        </div>
        Type
        <svg
          aria-label="Descend"
          className="StyledIcon-ofa7kd-0 hVBrNB"
          viewBox="0 0 24 24"
        >
          <path
            d="m2 16 6 6 6-6M11 3h11M11 7h8m-8 4h5M8 22V2"
            fill="none"
            stroke="#000"
            strokeWidth="2"
          />
        </svg>
      </label>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 eMSArZ"
      />
      <label
        className="StyledRadioButton__StyledRadioButtonContainer-g1f6ld-0 dKGASN"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="StyledBox-sc-13pk1d4-0 cWAgDf StyledRadioButton-g1f6ld-5 cQxxvY"
        >
          <input
            checked={false}
            className="StyledRadioButton__StyledRadioButtonInput-g1f6ld-1 bRmCoz"
            name="radio"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            tabIndex="-1"
            type="radio"
            value="TypeASC"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 bYgAvJ StyledRadioButton__StyledRadioButtonBox-g1f6ld-4 lkJviK"
          />
        </div>
        Type
        <svg
          aria-label="Ascend"
          className="StyledIcon-ofa7kd-0 hVBrNB"
          viewBox="0 0 24 24"
        >
          <path
            d="m2 8 6-6 6 6m-3 13h11m-11-4h8m-8-4h5M8 2v20"
            fill="none"
            stroke="#000"
            strokeWidth="2"
          />
        </svg>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots UsersPerPageIndex Users Per Page Index Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jgMvuu"
>
  <div
    className="StyledBox-sc-13pk1d4-0 kElnrm"
  >
    <span
      className="StyledText-sc-1sadyjn-0 fxbXHC"
    >
      Users per page:
    </span>
    <div
      className="StyledBox__StyledBoxGap-sc-13pk1d4-1 jMNBey"
    />
    <div
      className="StyledBox-sc-13pk1d4-0 dnSXwv"
      role="radiogroup"
    >
      <label
        className="StyledRadioButton__StyledRadioButtonContainer-g1f6ld-0 dKGASN"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="StyledBox-sc-13pk1d4-0 cWAgDf StyledRadioButton-g1f6ld-5 cQxxvY"
        >
          <input
            checked={true}
            className="StyledRadioButton__StyledRadioButtonInput-g1f6ld-1 bRmCoz"
            name="radio"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            tabIndex="0"
            type="radio"
            value="9"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 dufTFR StyledRadioButton__StyledRadioButtonBox-g1f6ld-4 lkJviK"
          >
            <svg
              className="StyledRadioButton__StyledRadioButtonIcon-g1f6ld-3 dQnYHj"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <circle
                cx={12}
                cy={12}
                r={6}
              />
            </svg>
          </div>
        </div>
        <span
          className="StyledRadioButton__StyledRadioButtonLabel-g1f6ld-2"
        >
          9
        </span>
      </label>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hCllNm"
      />
      <label
        className="StyledRadioButton__StyledRadioButtonContainer-g1f6ld-0 dKGASN"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="StyledBox-sc-13pk1d4-0 cWAgDf StyledRadioButton-g1f6ld-5 cQxxvY"
        >
          <input
            checked={false}
            className="StyledRadioButton__StyledRadioButtonInput-g1f6ld-1 bRmCoz"
            name="radio"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            tabIndex="-1"
            type="radio"
            value="18"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 bYgAvJ StyledRadioButton__StyledRadioButtonBox-g1f6ld-4 lkJviK"
          />
        </div>
        <span
          className="StyledRadioButton__StyledRadioButtonLabel-g1f6ld-2"
        >
          18
        </span>
      </label>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hCllNm"
      />
      <label
        className="StyledRadioButton__StyledRadioButtonContainer-g1f6ld-0 dKGASN"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="StyledBox-sc-13pk1d4-0 cWAgDf StyledRadioButton-g1f6ld-5 cQxxvY"
        >
          <input
            checked={false}
            className="StyledRadioButton__StyledRadioButtonInput-g1f6ld-1 bRmCoz"
            name="radio"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            tabIndex="-1"
            type="radio"
            value="27"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 bYgAvJ StyledRadioButton__StyledRadioButtonBox-g1f6ld-4 lkJviK"
          />
        </div>
        <span
          className="StyledRadioButton__StyledRadioButtonLabel-g1f6ld-2"
        >
          27
        </span>
      </label>
    </div>
  </div>
</div>
`;
